force-app/main/default/objects/Lead/fields/LINE_User_ID__c.field-meta.xml
<CustomField>
    <fullName>LINE_User_ID__c</fullName>
    <label>LINE User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>