force-app/main/default/objects/Lead/fields/Next_Filter_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Filter_Date__c</fullName>
    <label>Next Filter Date</label>
    <type>Date</type>
</CustomField>