force-app/main/default/objects/Lead/fields/Stripe_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Sub_ID__c</fullName>
    <description
  >Mock subscription id, set when the checkout link is sent. Copied to the contract on conversion.</description>
    <label>Stripe Sub ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>