force-app/main/default/objects/Lead/fields/Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan__c</fullName>
    <description
  >Plan the lead chose. Copied to the contract when the first payment converts the lead.</description>
    <label>Subscription Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (900 THB)</fullName>
            </value>
            <value>
                <fullName>Premium (1,500 THB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>